# sokoban_solver

./: .gitignore  CMakeLists.txt
deadlock_generator_src/: CMakeLists.txt  deadlock_generator.cpp  deadlock_generator.h  main.cpp
levels/: bipartite01.sok  example03.sok  jr06.sok
levels/original_sokoban/: 01.sok  02.sok  03.sok
src/: CMakeLists.txt  main.cpp  priority_queue.h  sokoban_board.cpp  sokoban_board.h  sokoban_board_graphs.cpp  sokoban_board_graphs.h  sokoban_board_state.cpp  sokoban_board_state.h  sokoban_box.h  sokoban_boxstate.cpp  sokoban_boxstate.h  sokoban_common.h  sokoban_deadlock_tester.cpp  sokoban_deadlock_tester.h  sokoban_formatter.cpp  sokoban_formatter.h  sokoban_priority_queue.h  sokoban_pushinfo.h  sokoban_solver.cpp  sokoban_solver.h  sokoban_transposition_graph.cpp  sokoban_transposition_graph.h  sokoban_transposition_table.h  sparse_graph.h  zobrist_hash.h
src/common/: replace_sorted.h  stable_priority_queue.h  string_join.h  zobrist_hash.h
src/deadlocks/: CMakeLists.txt  deadlock_info.cpp  deadlock_info.h  deadlocks.cpp  deadlocks.h  deadlocks1x2.cpp  deadlocks1x2.h  deadlocks2x2.cpp  deadlocks2x2.h  manual_deadlocks.h
src/sparse_graph/: sparse_graph.h  sparse_graph_edges_iterator.h  sparse_graph_nodes.h  sparse_graph_nodes_iterator.h
test/: CMakeLists.txt  test_common.cpp  test_solver_1.cpp  test_solver_common.cpp  test_solver_original.cpp  test_solver_simple.cpp  test_sparse_graph.cpp  test_ss1.cpp  test_stable_priority_queue.cpp  test_zobrist_hash.cpp
